Fixed past orders spacing

--- a/frontend/src/components/PastOrdersPage/PastOrders.css
+++ b/frontend/src/components/PastOrdersPage/PastOrders.css
@@ -33,22 +33,22 @@
 
 @media screen and (min-width:601px) {
 
-    .transaction-block{
-        height:200px;
-        width:100%;
-        
-    }
-
-    .transaction-section{
-        display: flex;
-        justify-content: flex-start;
-        width:30%;
-    }
-
+        .transaction-block{
+            height:200px;
+            width:100%;
+            
+        }
+    
+        .transaction-section{
+            display: flex;
+            justify-content: flex-start;
+            width:30%;
+        }
+    
     
         .rest-photo{
             padding-right: 2rem;
-            width:100%
+            min-width:260px;
         }
         .transact-buttons{
             display: flex;
@@ -92,6 +92,7 @@
 .transact-info{
     display: flex;
     flex-direction: column;
+    min-width:151px;
 }
 
 
